mockall使ってcontrollerのテスト

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio = {version = "1.30.0", features = ["full"]}
 tokio-util = { version = "0.7", features = ["io"] }
 async-trait = "0.1"
 sqlx = { version = "0.6", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono"] }
+mockall = "0.11"
