--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 DATABASE_URL=postgres://user:password@localhost/hoge
-DATABASE_URL_TEST=postgres://user:password@localhost/hoge
+DATABASE_URL_TEST=postgres://user:password@localhost:5433/test_hoge
