--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,9 @@ uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
 tokio = {version = "1.30.0", features = ["full"]}
 tokio-util = { version = "0.7", features = ["io"] }
 async-trait = "0.1"
-sqlx = { version = "0.6", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono"] }
+sqlx = { version = "0.6", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono", "json"] }
+chrono = {version = "0.4", features = ["serde"]}
 mockall = "0.11"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+thiserror = "1.0"
